<resources>
    <string name="app_name">DeliverySystemManagerSite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="title_package">Package</string>
    <string name="title_driver">Driver</string>
    <string name="title_vendor">Vendor</string>
    <string name="title_site">Site</string>
    <string name="title_package_detail">PackageDetail</string>
    <string name="title_driver_detail">DriverDetail</string>
    <string name="title_vendor_detail">VendorDetail</string>
    <string name="title_site_detail">SiteDetail</string>

    <string name="title_workList">WorkList</string>
    <string name="title_add">Add</string>
    <string name="title_Mine">Mine</string>
    <string name="title_Modify_password">Modify password</string>

    <string name="title_activity_tab">tabActivity</string>
    <string name="tab_text_1">Package</string>
    <string name="tab_text_2">Driver</string>
    <string name="tab_text_3">Vendor</string>
    <string name="tab_text_4"> Site </string>

    <drawable name="clr_normal">#6200EE</drawable>
    <drawable name="clr_pressed">#8759CA</drawable>
    <string name="title_activity_driver_home">DriverHomeActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>